Should now work on windows32/64 and osx32/64. Could easily add linux support from here.
SWTRenamer.java should also be removed from the src folder (if I did
this correctly...)